--- a/coordinate.yml
+++ b/coordinate.yml
@@ -14,5 +14,7 @@ services:
       - http.port=9203
       - ES_JAVA_OPTS=-Xms128m -Xmx128m
       - "discovery.zen.ping.unicast.hosts=${ip}:9302"
-    network_mode: "host"
+    ports:
+      - 9203:9203
+      - 9303:9303
     restart: always
